# medha

./: .env.example  .gitignore  .golangci.yml  .tool-versions  CLAUDE.md  FEATURE_ANALYSIS.md  Makefile  POSTGRES_MIGRATION.md  PRD.md  README.md  agent_mem.md  docker-compose.local.yml  docker-compose.yml  mise.toml
.claude/: settings.json
deploy/: docker-compose.lightweight.yml  docker-compose.prod.yml
docs/: DEPLOYMENT.md  DEVELOPMENT.md  POSTGRES_SETUP.md
medha-api/: .golangci.yml  Dockerfile  Dockerfile.mcp  go.mod  go.sum
medha-extraction/: Dockerfile  pyproject.toml
medha-extraction/medha/: __init__.py  api.py  config.py
medha-extraction/medha/compression/: __init__.py  llm_compressor.py  synthetic_compressor.py  validator.py
medha-extraction/medha/embedding/: __init__.py  local_embedder.py  openai_embedder.py  providers.py
medha-extraction/medha/enrichment/: __init__.py  cache.py  enricher.py  wikipedia.py
medha-extraction/medha/extraction/: __init__.py  heuristic_extractor.py  pipeline.py  relationships.py  types.py
medha-extraction/medha/llm/: __init__.py  client.py  openai_compat.py
medha-extraction/medha/models/: __init__.py  compressed.py  entity.py  observation.py  relationship.py
medha-extraction/medha/summarization/: __init__.py  session.py
medha-extraction/medha/utils/: __init__.py  logging.py  retry.py  validators.py
medha-extraction/tests/: conftest.py  test_compression.py  test_embedding.py  test_enrichment.py  test_extraction.py  test_llm_compression.py  test_relationships.py  test_skeleton.py  test_summarization.py
(+170 files in other folders)
