[project]
name = "agent-mem"
version = "0.1.0"
description = "Python service for agent_mem: extraction, compression, summarization, embeddings, enrichment."
requires-python = ">=3.14,<3.15"
license = { text = "Apache-2.0" }
authors = [
    { name = "agent_mem maintainers" },
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "prometheus-client>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]
nlp = [
    "spacy>=3.7",
    "gliner>=0.2",
    "rapidfuzz>=3.10",
]
llm = [
    "anthropic>=0.39",
    "openai>=1.54",
    "google-generativeai>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["medha"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "A", "C4", "PIE", "PT", "RET", "SIM"]
ignore = ["S101"]  # asserts ok in tests

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PT"]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
